<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>robotiq_modbus_rtu</name>
  <version>1.0.0</version>
  <description>A stack to communicate with Robotiq grippers using the Modbus RTU protocol</description>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/robotiq</url>
  <author>Nicolas Lauzier (Robotiq inc.)</author>
  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>python-pymodbus</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
